# BELLA-traccc

./: CMakeLists.txt  README.md
bfield/: bfield.cvf
shell/: telescope_script.sh
src/: field_options.hpp  telescope_simulation.cpp  truth_fitting_momentum_residual.cpp  write_bfield.cpp
